# skybridge

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .workspaces  .yamllint  =0.23  AGENTS.md  CHANGELOG.md  PLAN.md  PR_DESCRIPTION.md  README.md  VERSION  VERSION.legacy  create_forum_pyropaws.py  create_pyropaws_forum.py  create_pyropaws_posts.py  create_sky_golem.py  demo_event_bus_pubsub.py  demo_integration_handlers.py  discord.cmd  discord_bot.py  discord_bot_paper.py  discord_channel_mcp.py  format_portfolio.py  hello_world.py  list_mcp_tools.py  npm-shrinkwrap.json  package-lock.json  package.json  paper_state.json  paper_state.v1.bak  pyproject.toml  pytest.ini  (+51 more)
.agents/: ADR001-Feature-Map-Skybridge.md  ADR010-adotar-sky-rpc.md  ARCHITECTURE-claude-code.md  LEARNING-GUIDE.md  PB001-Feature-Mapping-Skybridge.md  PRD001-Feature-Map-Skybridge.md  ROADMAP-skybridge-codebase-analysis.md  TASK001-Feature-Mapping-Skybridge.md  TASK003-ADR002-Estrutura-Repo[MODELO OPENAI CODEX ME LEVANDO A LOUCURA].md  features-report.md  inspiration-report.md  memory.md  poc-helloworld-relatorio.md  relatorio-auditoria-adrs-v2.md  relatorio-auditoria-adrs-v3.md  relatorio-auditoria-adrs.md  task000-discovery-report.md  task000_discovery.py  task002-entity-dates.json  task002_update_dates.py  validate_snapshot_api.py
.agents/my-first-plugin/: README.md
.claude/: CLAUDE.md  feature-request-resume-sessions.md  settings.json  settings.local.json  statusline.py
.claude/cache/: ralph-session-id.txt
.claude/docs/: hook-session-isolation-guide.md
.claude/hooks/: hooks.json  ralph-session-capture.sh  session-aware-hook-wrapper.sh  test-ralph-hook.sh  test-retry-v2.sh  test-retry.sh
.claude/skills/: INDEX.md  utf8-check.skill
.githooks/: README.md  post-commit
.github/workflows/: docs.yml  release.yml
.husky/: pre-commit
.hypothesis/constants/: 006b559781a41f7f  052738b5ef85e809  0a174ab092bdf149  11e12b17120b2c95  1272c7bb27015196  127e8fa3efd6a7b8  161b8e1ee81d034f  1a51c14370129ae1  24b63b5fc802a433  2e90e9b833b51a7e  320031d770fca209  3d22539ae35a545a  4169a5b196b2cda1  43a12c56b1d568bc  47c07ff2426f12e8  52fb2b9e3dcee81f  54c7583226fe1340  5519860d4817d286  5747ab5a56465b4f  5962944738f3a08c  5eb1bff546a70295  5f7b9630cc311627  5f7dee3ccc5b50b9  63282bd83c7fce03  64c1a76eb2413ded  668eaff13635a6a4  66a01aaa2f82c4f0  670c779e81e33967  67d2ad11833cc754  6a2f8939b0071101  7093969d521d82c1  72a297844fdb3fc6  750c870b790e177a  7791b0b57ea46b63  7dc392ff666a492c  7e64c5168f0714df  818de4a7b96e0635  8fa22f51da57c917  9504bdf728b8cd87  967b9783fe58cc5b  (+23 more)
.hypothesis/patches/: 2026-04-05--775c92e4.patch
.hypothesis/tmp/: tmp4swrr78a  tmp92l4jzef  tmpe7zs2xd7  tmplctmedvg  tmpoulc14ow  tmppo62mlsq  tmpt16z0jks  tmpvg58dbwv  tmpzo13sufj
.opencode/command/: opsx-apply.md  opsx-archive.md  opsx-continue.md  opsx-ff.md  opsx-new.md  opsx-onboard.md  opsx-verify.md
.sky/: ISSUE_42_SUMMARY.md  snapshot.json
apps/api/: main.py
apps/cli/: __init__.py  kanban.py  main.py  snapshot.py  youtube.py
apps/demo/: __init__.py  cli.py
apps/mcp/: glitchtip.py
apps/mcp_servers/: planet_crafter_companion.py
apps/server/: __init__.py  main.py
apps/web/: index.html  main.py  package-lock.json  package.json  vite.config.ts  vitest.config.ts
cli/: __init__.py  workspace.py
demos/: demo_charts_pro.py  demo_m1.py  demo_portfolio_panel.py
docs/: ANALISE_PROBLEMAS_ATUAIS.md  FLUXO_GITHUB_TRELO_COMPONENTES.md  GUIA_DECISAO_MENSAGERIA.md  IMPLEMENTACAO_FILEBASEDQUEUE.md  MICRO_TASKS.md  PLANO_MELHORIAS_YOUTUBE_PIPELINE.md  Próximos Passos.md  README.md  STANDALONE_VS_MAIN.md  STRATEGY_FLOW_STATUS_TAXONOMY.md  WEBHOOK_SETUP.md  changelog.md  discord-tokens.md  figma-auth.md  guide-textual-markdown.md  issue-template-PRD018-problemas-fase2.md  privacy.md  sky-curriculum-discord.md  versionamento.md
docs/adr/: ADR000-Descoberta via Score de Snapshot.md  ADR004-adotar-json-rpc-contrato-canonico.md  ADR007-adota-baseline-seguranca-llm.md  ADR008-adotar-https-transporte.md  ADR009-cabecalho-utf8-em-python.md  ADR010-adotar-sky-rpc.md  ADR012-estrategia-versionamento.md  ADR016-openapi-hibrido-estatico-dinamico.md  ADR018-linguagem-portugues-brasil-codebase.md  ADR019-simplificacao-estrutura-src.md  ADR020-integracao-trello.md  ADR021-adotar-claude-agent-sdk.md  ADR022-fluxo-bidirecional-github-trello.md  ADR023-padrao-prefixos-rotas-api-web.md  ADR024-workspaces-multi-instancia.md  ADR025-estrategia-changelog-release-notes.md  ADR026-cancel-scope-problema.md  (+1 more)
docs/core/: history.md
plugins/: README.md
runtime/: __init__.py  changelog.py
scripts/: benchmark_kokoro.py  benchmark_stt.py  check_webhook_handler.py  collect_vocab_simple.py  convert_docx_to_md.py  create_test_agent.py  debug_tts_streaming.py  demo_collections.py  demo_embedding.py  demo_fila_e2e.py  diagnose_trello.py  fix_skypedia_dedup.py  generate_keys.py  get_youtube_token.py  list_favorites.py  migrate_json_to_rag.py  migrate_structure.py  profile_cold_start.py  renew_youtube_token.py  setup_youtube_state.py  sky_bootstrap.py  sky_rag.py  sky_textual.py  snapshot_capture.py  test_agent_spawn_debug.py  test_audio.py  test_clean_text.py  test_kokoro.py  test_kokoro_segments.py  test_kokoro_warm.py  test_label_sync.py  test_results_baseline.txt  test_signature_removal.py  test_skypedia.py  test_sqlite_queue.py  test_strip_markdown.py  test_stt.py  test_stt_benchmark.py  test_stt_model_info.py  test_stt_streaming.py  (+20 more)
skybridge-test-worktree/: hello_world.txt  hello_world_test.txt
src/: version.py
tests/: conftest.py  ralph_loop_multi_session_test.py  ralph_loop_session_mock_test.py  test_encoding_header.py  test_hello_world.py  test_imports.py  test_mojibake.py  test_mojibake_docs.py  test_openapi_hybrid_online.py  test_openapi_schema.py  test_public_routes.py  test_server_routes.py  test_sky_rpc.py  test_sky_rpc_v03.py
testsprite_tests/: standard_prd.json  testsprite_backend_test_plan.json
(+1841 files in other folders)
