# pyproject.toml - Configuração do Skybridge
# Build system com setuptools_scm para versionamento dinâmico via git tags (PL001)

[project]
name = "skybridge"
dynamic = ["version"]
requires-python = ">=3.11"
description = "Microkernel RPC Platform for building distributed systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "h4mn", email = "hadley.santos@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "python-semantic-release>=9.0.0",
]

[tool.setuptools_scm]
write_to = "src/_version.py"
version_scheme = "release-branch-semver"
fallback_version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.0.0"

[tool.semantic_release]
version_source = "tag"
tag_format = "v{version}"
major_on_zero = false
branch = "main"

[tool.semantic_release.changelog]
mode = "update"
template_dir = "templates"
exclude_commit_patterns = [
    "^Initial commit",
    "^chore\\(release\\):",
    "^chore\\(release\\): bump version",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test", "revert"]
default_bump_level = 0

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = false

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"
