# pyproject.toml - Configuração do Skybridge
# Build system com setuptools_scm para versionamento dinâmico via git tags (PL001)

[project]
name = "skybridge"
dynamic = ["version"]
requires-python = ">=3.11"
description = "Microkernel RPC Platform for building distributed systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "h4mn", email = "hadley.santos@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "python-semantic-release>=9.0.0",
]

[project.dependencies]
# Voice API dependencies (voice-api-isolation change)
starlette = ">=0.27.0"
httpx = ">=0.24.0"
uvicorn = {extras = ["standard"], version = ">=0.23.0"}
python-multipart = ">=0.0.6"

# Discord MCP Server dependencies
discord-py = ">=2.3.0"
mcp = ">=1.0.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
python-dotenv = ">=1.0.0"

# Paper Trading dependencies
requests = ">=2.31.0"
matplotlib = ">=3.7.0"

# Autokarpa Sky Lab dependencies (autokarpa-sky-lab change)
pytest = ">=8.0"
pytest-cov = ">=4.0"
pytest-asyncio = ">=0.23"
hypothesis = ">=6.100"  # Property-Based Testing
mutmut = ">=3.5"        # Mutation Testing (version 3.5.0 verified)
radon = ">=6.0"          # Complexity analysis

[project.scripts]
# Voice API entry point (voice-api-isolation change)
sky-voice-api = "src.core.sky.voice.api.main:main"

[tool.setuptools_scm]
write_to = "src/_version.py"
version_scheme = "release-branch-semver"
fallback_version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.0.0"

[tool.semantic_release]
version_source = "tag"
tag_format = "v{version}"
major_on_zero = false
branch = "main"

[tool.semantic_release.changelog]
mode = "update"
template_dir = "templates"
exclude_commit_patterns = [
    "^Initial commit",
    "^chore\\(release\\):",
    "^chore\\(release\\): bump version",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test", "revert"]
default_bump_level = 0

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = false

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"
